Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119136

qt creator does not restore to maximized state when minimized from maximized state

    XMLWordPrintable

Details

    • Linux/Wayland
    • 0afaafef3 (dev), 9eb71d709 (6.7), aa73e840c (6.6)

    Description

      hello,

      preconditions:

      • up-to-date ubuntu 22.04(jammy) lts
      • qtcreator 11.03 installed under ~user/ from qt maintenance tool

      steps to reproduce:

      1. start qt creator with QT_QPA_PLATFORM=wayland exported
      2. maximize your qt creator window
      3. minimize it by clicking on the "_" button
      4. click on the icon on the left side to restore

      expected behaviour: the window should be restored to maximized state

      actual behaviour: the window is shown, however it isn't shown maximized

      please note that minimizing the window with hotkeys (e.g. windows+d) is not affected

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davidedmundson David Edmundson
            imre Imre PĂ©ntek
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews