client: If the window minimized state is requested do not forward other states

In QWindowPrivate::effectiveState if the minimize flag is requested all
other states are cleared. This makes sense for the internal
representation, but we do not want to send the unset maximised state
across the wire.

Fixes: QTBUG-119136
Pick-to: 6.6
Change-Id: I9b758c67ce11420b421a295fe3e65b68bf546027
Reviewed-by: Liang Qi <liang.qi@qt.io>
(cherry picked from commit 0afaafef3916de86abaf5204c8b8350697ac15e8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>